Added comments count to the blog lists

--- a/app/code/Krga/Blog/view/frontend/templates/index.phtml
+++ b/app/code/Krga/Blog/view/frontend/templates/index.phtml
@@ -41,6 +41,7 @@
             <?php foreach( $posts as $post ) {
                 $postTagsHtml = $isListTagsEnabled ? $post->getPostTagsHtml() : '';
                 $author = $post->getPostAuthorFullInfo($post->getPostAuthor());
+                $commentsCountInfo = $post->getPostCommentCountInfo();
                 ?>
                 <div class="post-holder">
                     <div class="post-holder-inner">
@@ -77,6 +78,7 @@
                                 
                                 echo '<span class="date"> at ' . date('F j, Y', strtotime($post->getCreatedAt())) . '</span>';
                             ?>
+                            <?php echo $commentsCountInfo; ?>
                         </div>
                     </div>
                     <a class="post-link post-link-overlay" href="<?php echo $block->getUrl('posts/post/index', ['post_id' => $post->getPostId()]); ?>"></a>
