--- a/app/code/Krga/Blog/view/frontend/web/css/global-styles.css
+++ b/app/code/Krga/Blog/view/frontend/web/css/global-styles.css
@@ -53,6 +53,10 @@
     margin: 0 0 7px;
 }
 
+.post-info:has(.comments-number) .date:after {
+    content: ';';
+}
+
 .post-content {
     margin: 0 0 7px;
 }
