--- a/app/code/Krga/Blog/view/frontend/templates/post.phtml
+++ b/app/code/Krga/Blog/view/frontend/templates/post.phtml
@@ -45,17 +45,17 @@
             <?php } ?>
             <div class="post-comment-form">
                 <h4 class="post-comment-form-title">Write a comment:</h2>
-                <form id="add-post-comment-form" action="<?php echo $block->getUrl('posts/index/addcomment'); ?>" method="post">
+                <form class="add-post-comment-form" action="<?php echo $block->getUrl('posts/index/addcomment'); ?>" method="post">
                     <label for="author_name">Name:</label>
-                    <input type="text" id="author_name" name="author_name" required />
+                    <input type="text" class="author_name" name="author_name" required />
                     <br/>
                     <br/>
                     <label for="author_email">Email:</label>
-                    <input type="email" id="author_email" name="author_email" required />
+                    <input type="email" class="author_email" name="author_email" required />
                     <br/>
                     <br/>
                     <label for="content">Comment:</label>
-                    <textarea id="content" name="content" required></textarea>
+                    <textarea class="content" name="content" required></textarea>
                     <br/>
                     <br/>
                     <input type="hidden" name="post_id" value="<?php echo $post->getId(); ?>" />
