Improved comments to limit comments depth; Added Recent and Related posts to blog list

--- a/app/code/Krga/Blog/view/frontend/web/css/global-styles.css
+++ b/app/code/Krga/Blog/view/frontend/web/css/global-styles.css
@@ -121,3 +121,27 @@
 .post-comment-form-title {
     margin: 0 0 15px;
 }
+
+.recent-posts-outer {
+    margin: 30px 0 0;
+}
+
+.recent-posts {
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.recent-posts-intro-title {
+    margin: 0 0 20px;
+}
+
+.related-posts-outer {
+    margin: 30px 0 0;
+}
+
+.related-posts {
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.related-posts-intro-title {
+    margin: 0 0 20px;
+}
