--- a/app/code/Krga/Blog/view/frontend/templates/post.phtml
+++ b/app/code/Krga/Blog/view/frontend/templates/post.phtml
@@ -7,6 +7,8 @@
         $author = $post->getPostAuthorFullInfo($post->getPostAuthor());
         $postCommentsGrouped = $post->getGroupedPostComments();
         $postCommentsCount = $post->getPostCommentCount();
+        $recentPosts = $post->getRecentPosts();
+        $relatedPosts = $post->getRelatedPosts();
         ?>
         <?php 
             $featuredImage = $block->getImageUrl($post->getPostImage());
@@ -44,7 +46,7 @@
                 <h3 class="comments-title no-comments">No comments for this post.</h3>
             <?php } ?>
             <div class="post-comment-form">
-                <h4 class="post-comment-form-title">Write a comment:</h2>
+                <h3 class="post-comment-form-title">Write a comment:</h3>
                 <form class="add-post-comment-form" action="<?php echo $block->getUrl('posts/index/addcomment'); ?>" method="post">
                     <label for="author_name">Name:</label>
                     <input type="text" class="author_name" name="author_name" required />
@@ -63,5 +65,107 @@
                 </form>
             </div>
         </div>
+        <?php if (count($recentPosts)>0) { ?>
+            <div class="recent-posts-outer">
+                <h3 class="recent-posts-intro-title">Recent Posts</h3>
+                <div class="posts-holder recent-posts">
+                    <?php if(is_array($recentPosts)) { ?>
+                        <?php foreach( $recentPosts as $recentPost ) {
+                            $postTagsHtml = $recentPost->getPostTagsHtml();
+                            $author = $recentPost->getPostAuthorFullInfo($recentPost->getPostAuthor());
+                            $commentsCountInfo = $recentPost->getPostCommentCountInfo();
+                            ?>
+                            <div class="post-holder">
+                                <div class="post-holder-inner">
+                                    <?php
+                                        $featuredImage = $block->getImageUrl($recentPost->getPostImage());
+
+                                        if (!empty($featuredImage)) { ?>
+                                            <div class="post-image">
+                                                <img src="<?= $featuredImage; ?>" alt="Post Image" />
+                                            </div>
+                                        <?php }
+                                    ?>
+                                    <h3 class="post-title">
+                                        <a class="post-link" href="<?php echo $block->getUrl('posts/post/index', ['post_id' => $recentPost->getPostId()]); ?>">
+                                            <?php echo $recentPost->getPostTitle(); ?>
+                                        </a>
+                                    </h3>
+
+                                    <h6 class="post-tags">
+                                        <?php echo $postTagsHtml; ?>
+                                    </h6>
+
+                                    <p class="post-excerpt"><?php echo $recentPost->getPostExcerpt(); ?></p>
+                                    
+                                    <div class="post-info">
+                                        <?php 
+                                            if( is_array($author) && count($author) > 0 ) {
+                                                echo '<span class="author">Written by ' . $author['firstname'] . ' ' . $author['lastname'] . '</span>';
+                                            }
+                                            
+                                            echo '<span class="date"> at ' . date('F j, Y', strtotime($recentPost->getCreatedAt())) . '</span>';
+                                        ?>
+                                        <?php echo $commentsCountInfo; ?>
+                                    </div>
+                                </div>
+                                <a class="post-link post-link-overlay" href="<?php echo $block->getUrl('posts/post/index', ['post_id' => $recentPost->getPostId()]); ?>"></a>
+                            </div>
+                        <?php } ?>
+                    <?php } ?>
+                </div>
+            </div>
+        <?php } ?>
+        <?php if (count($relatedPosts)>0) { ?>
+            <div class="related-posts-outer">
+                <h3 class="related-posts-intro-title">Related Posts</h3>
+                <div class="posts-holder related-posts">
+                    <?php if(is_array($relatedPosts)) { ?>
+                        <?php foreach( $relatedPosts as $relatedPost ) {
+                            $postTagsHtml = $relatedPost->getPostTagsHtml();
+                            $author = $relatedPost->getPostAuthorFullInfo($relatedPost->getPostAuthor());
+                            $commentsCountInfo = $relatedPost->getPostCommentCountInfo();
+                            ?>
+                            <div class="post-holder">
+                                <div class="post-holder-inner">
+                                    <?php
+                                        $featuredImage = $block->getImageUrl($relatedPost->getPostImage());
+
+                                        if (!empty($featuredImage)) { ?>
+                                            <div class="post-image">
+                                                <img src="<?= $featuredImage; ?>" alt="Post Image" />
+                                            </div>
+                                        <?php }
+                                    ?>
+                                    <h3 class="post-title">
+                                        <a class="post-link" href="<?php echo $block->getUrl('posts/post/index', ['post_id' => $relatedPost->getPostId()]); ?>">
+                                            <?php echo $relatedPost->getPostTitle(); ?>
+                                        </a>
+                                    </h3>
+
+                                    <h6 class="post-tags">
+                                        <?php echo $postTagsHtml; ?>
+                                    </h6>
+
+                                    <p class="post-excerpt"><?php echo $relatedPost->getPostExcerpt(); ?></p>
+                                    
+                                    <div class="post-info">
+                                        <?php 
+                                            if( is_array($author) && count($author) > 0 ) {
+                                                echo '<span class="author">Written by ' . $author['firstname'] . ' ' . $author['lastname'] . '</span>';
+                                            }
+                                            
+                                            echo '<span class="date"> at ' . date('F j, Y', strtotime($relatedPost->getCreatedAt())) . '</span>';
+                                        ?>
+                                        <?php echo $commentsCountInfo; ?>
+                                    </div>
+                                </div>
+                                <a class="post-link post-link-overlay" href="<?php echo $block->getUrl('posts/post/index', ['post_id' => $relatedPost->getPostId()]); ?>"></a>
+                            </div>
+                        <?php } ?>
+                    <?php } ?>
+                </div>
+            </div>
+        <?php } ?>
     <?php } ?>
 </div>
