--- a/app/code/Krga/Blog/view/frontend/web/css/global-styles.css
+++ b/app/code/Krga/Blog/view/frontend/web/css/global-styles.css
@@ -53,7 +53,8 @@
     margin: 0 0 7px;
 }
 
-.post-info .date:after {
+.post-info .date:after, 
+.post-info .reading-time:after {
     content: ';';
 }
 
