--- a/app/code/Krga/Blog/view/frontend/layout/posts_tags_index.xml
+++ b/app/code/Krga/Blog/view/frontend/layout/posts_tags_index.xml
@@ -2,7 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Krga\Blog\Block\Tag" name="view_tag" template="Krga_Blog::view_tag.phtml" />
+            <block class="Krga\Blog\Block\Tag" name="view-tag" template="Krga_Blog::view-tag.phtml" />
         </referenceContainer>
     </body>
 </page>
